--- a/Lots-of-Checklists/MainWindow.xaml
+++ b/Lots-of-Checklists/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Lots_of_Checklists"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="700" Width="450">
     <Grid>
-        
+        <Label Content="Label" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
