--- a/Lots-of-Checklists/Views/OutsideView.xaml
+++ b/Lots-of-Checklists/Views/OutsideView.xaml
@@ -3,10 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Lots_of_Checklists.Views"
+             xmlns:views="clr-namespace:Lots_of_Checklists.Views"
+             xmlns:viewmodels="clr-namespace:Lots_of_Checklists.ViewModels"
+             
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+    <Grid Background="AliceBlue">
+        <ListBox x:Name="OutsideListBox"
+                 Margin="10,36,10,59"
+                 ItemsSource="{Binding CurrentCollectionSource}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Description}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <Button Content="DebugButton" Command="{Binding DisplayInsideView, RelativeSource={RelativeSource AncestorType={x:Type views:MainView}}, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </UserControl>
