--- a/Lots-of-Checklists/Views/InsideView.xaml
+++ b/Lots-of-Checklists/Views/InsideView.xaml
@@ -7,6 +7,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="Beige">
-            
+        <ListBox x:Name="InsideListBox"
+                 Margin="10,36,10,59"
+                 ItemsSource="{Binding CurrentItemCollectionSource}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Description}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </UserControl>
