--- a/Lots-of-Checklists/Views/OutsideView.xaml
+++ b/Lots-of-Checklists/Views/OutsideView.xaml
@@ -11,13 +11,16 @@
     <Grid Background="AliceBlue">
         <ListBox x:Name="OutsideListBox"
                  Margin="10,36,10,59"
-                 ItemsSource="{Binding CurrentCollectionSource}">
+                 ItemsSource="{Binding CurrentCollectionSource}"
+                 SelectedItem="{Binding SelectedChecklist, Mode=TwoWay}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Description}" />
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <Button Content="DebugButton" Command="{Binding DisplayInsideView, RelativeSource={RelativeSource AncestorType={x:Type views:MainView}}, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75"/>
+        <Button Content="DebugButton" Command="{Binding DataContext.DebugCommand, RelativeSource=
+    {RelativeSource AncestorType={x:Type views:MainView}}, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75"/>
+        <Label HorizontalAlignment="Right" VerticalAlignment="Top" Width="1000" Content="{Binding SelectedChecklist, Mode=OneWay}"/>
     </Grid>
 </UserControl>
