--- a/Lots-of-Checklists/Views/OutsideView.xaml
+++ b/Lots-of-Checklists/Views/OutsideView.xaml
@@ -20,7 +20,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <Button Content="DebugButton" Command="{Binding DataContext.DebugCommand, RelativeSource=
-    {RelativeSource AncestorType={x:Type views:MainView}}, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75"/>
-        <Label HorizontalAlignment="Right" VerticalAlignment="Top" Width="1000" Content="{Binding SelectedChecklist, Mode=OneWay}"/>
+    {RelativeSource AncestorType={x:Type views:MainView}}, Mode=OneWay}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75"/>
+        <!--<Label HorizontalAlignment="Right" VerticalAlignment="Top" Width="1000" Content="{Binding SelectedChecklist, Mode=OneWay}"/>-->
     </Grid>
 </UserControl>
