Replace ListBox → ListView👌

--- a/Lots-of-Checklists/Views/InsideView.xaml
+++ b/Lots-of-Checklists/Views/InsideView.xaml
@@ -7,15 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="Beige">
-        <ListBox x:Name="InsideListBox"
+        <ListView x:Name="InsideListBox"
                  Margin="10,36,10,59"
                  ItemsSource="{Binding ItemSource}">
-            <ListBox.ItemTemplate>
+            <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Description}" />
                 </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+            </ListView.ItemTemplate>
+        </ListView>
         <Button Content="Return" Command="{Binding DataContext.DebugCommandTwo, RelativeSource=
     {RelativeSource AncestorType={x:Type local:MainView}}, Mode=OneWay}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75"/>
     </Grid>
