--- a/Lots-of-Checklists/Views/OutsideView.xaml
+++ b/Lots-of-Checklists/Views/OutsideView.xaml
@@ -8,11 +8,12 @@
              
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="AliceBlue">
+    <Grid Background="MistyRose">
         <ListView x:Name="OutsideListBox"
                  Margin="10,36,10,59"
                  ItemsSource="{Binding CurrentCollectionSource}"
-                 SelectedItem="{Binding SelectedChecklist, Mode=TwoWay}">
+                 SelectedItem="{Binding SelectedChecklist, Mode=TwoWay}"
+                 Background="White">
 
             <ListView.ItemTemplate>
                 <DataTemplate>
@@ -27,5 +28,8 @@
         <Button Content="DebugButton" Command="{Binding DataContext.DebugCommand, RelativeSource=
     {RelativeSource AncestorType={x:Type views:MainView}}, Mode=OneWay}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75"/>
         <!--<Label HorizontalAlignment="Right" VerticalAlignment="Top" Width="1000" Content="{Binding SelectedChecklist, Mode=OneWay}"/>-->
+
+        <Button Content="NewChecklist" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Command="{Binding DataContext.NewChecklistCommand, RelativeSource=
+    {RelativeSource AncestorType={x:Type views:MainView}}, Mode=OneWay}"/>
     </Grid>
 </UserControl>
